--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,9 +17,12 @@ steps:
 
 - script: |
     npm install
-    npm update
+  displayName: 'npm install'
+  workingDirectory: $(directory)
+- script: 
     npm run build
-  displayName: 'npm install and build'
+  displayName: 'npm uild'
+  workingDirectory: $(directory)
 
 - task: PublishBuildArtifacts@1
   inputs:
